# Cloud-Terrastodon

./: .gitignore  APPROVAL_FORM.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Clippy.toml  LICENSE.fr_ca.txt  LICENSE.txt  README.fr_ca.md  README.md  RELEASE_PROCESS.md  TODO.md  build.rs  check-all.ps1  publish.ps1  release.ps1  run-profiler.ps1  rustfmt.toml  set_version.ps1  test.ps1  update.ps1
crates/azure/: Cargo.toml
crates/azure/src/: access_token.rs  accounts.rs  app_service_list_request.rs  application_gateway_backend_health_request.rs  application_gateway_list_request.rs  application_registration_get_request.rs  application_registration_list_request.rs  application_registration_search_request.rs  application_registrations.rs  application_role_list_request.rs  arm_rest.rs  auth.rs  batch_api.rs  cognitive_services_account_deployment_list_request.rs  cognitive_services_account_list_request.rs  compute_publisher_vm_image_offer_sku_versions.rs  compute_publisher_vm_image_offer_skus.rs  compute_publisher_vm_image_offers.rs  compute_publishers.rs  compute_sku_prices.rs  compute_skus.rs  conditional_access_named_locations.rs  conditional_access_policies.rs  container_instance_list_request.rs  container_registry.rs  cost_management.rs  create_role_assignment.rs  eligible_child_resources.rs  entra_directory_objects_by_ids_request.rs  entra_group_get_request.rs  entra_group_list_request.rs  entra_group_member_add.rs  entra_group_member_remove.rs  entra_group_members.rs  entra_group_members_batch.rs  entra_group_owners.rs  entra_groups_for_member.rs  entra_user_get_request.rs  entra_user_list_request.rs  entra_user_search_request.rs  (+83 more)
crates/azure/tests/: deserialize_fail_tests.rs  predict_key_vault_access.rs
crates/azure_devops/: Cargo.toml
crates/azure_devops/src/: azure_devops_agent_packages.rs  azure_devops_agent_pool_entitlements_for_pool.rs  azure_devops_agent_pool_entitlements_for_project.rs  azure_devops_agent_pools.rs  azure_devops_configure.rs  azure_devops_group.rs  azure_devops_group_license_entitlements.rs  azure_devops_group_member.rs  azure_devops_groups_for_member.rs  azure_devops_license_entitlement_update.rs  azure_devops_license_entitlements.rs  azure_devops_projects.rs  azure_devops_repos.rs  azure_devops_service_endpoint.rs  azure_devops_team.rs  azure_devops_team_member.rs  azure_devops_teams.rs  azure_devops_test_plans.rs  azure_devops_test_suite_cases.rs  azure_devops_test_suites.rs  azure_devops_user_entitlements.rs  azure_devops_user_license_entitlement.rs  azure_devops_user_license_entitlement_update.rs  azure_devops_user_license_entitlements.rs  azure_devops_user_onboarding_statuses.rs  azure_devops_work_item_queries.rs  azure_devops_work_item_queries_invoke.rs  azure_devops_work_items_for_query.rs  default_organization.rs  default_organization_tui.rs  default_project.rs  get_default_organization_name.rs  get_default_project_name.rs  lib.rs
crates/azure_devops_rest_client/: Cargo.toml
crates/azure_devops_rest_client/src/: create_client.rs
crates/azure_devops_types/: Cargo.toml
crates/azure_devops_types/src/: azure_devops_account_id.rs  azure_devops_agent_package.rs  azure_devops_agent_pool.rs  azure_devops_agent_pool_argument.rs  azure_devops_agent_pool_entitlement.rs  azure_devops_agent_pool_entitlement_id.rs  azure_devops_agent_pool_id.rs  azure_devops_agent_pool_name.rs  azure_devops_descriptor.rs  azure_devops_entra_user_descriptor.rs  azure_devops_group.rs  azure_devops_group_license_entitlement.rs  azure_devops_group_member.rs  azure_devops_license_entitlement.rs  azure_devops_license_kind.rs  azure_devops_license_rule.rs  azure_devops_license_type.rs  azure_devops_organization_name.rs  azure_devops_organization_url.rs  azure_devops_organizations.rs  azure_devops_project.rs  azure_devops_project_argument.rs  azure_devops_project_id.rs  azure_devops_project_name.rs  azure_devops_projects.rs  azure_devops_repos.rs  azure_devops_service_endpoint.rs  azure_devops_service_endpoint_authorization.rs  azure_devops_service_endpoint_created_by.rs  azure_devops_service_endpoint_data.rs  azure_devops_service_endpoint_data_azurerm.rs  azure_devops_service_endpoint_id.rs  azure_devops_service_endpoint_kind.rs  azure_devops_service_endpoint_name.rs  azure_devops_service_endpoint_operation_status.rs  azure_devops_service_endpoint_owner.rs  azure_devops_service_endpoint_project_reference.rs  azure_devops_suite_test_case.rs  azure_devops_team.rs  azure_devops_team_member.rs  (+9 more)
crates/azure_locations/: Cargo.toml
crates/azure_locations/src/: azure_location_generator.rs  fetch_all_azure_locations.rs  lib.rs
crates/azure_resource_types/: Cargo.toml
crates/azure_resource_types/src/: lib.rs  resource_types.rs  resource_types_ext.rs  resource_types_generator.rs  resource_types_serde.rs  resource_types_tests.rs
crates/azure_types/: Cargo.toml  helper.ipynb  validate.ps1
crates/azure_types/src/: access_token.rs  accounts.rs  address_prefix.rs  address_prefixes.rs  all_or.rs  app.rs  application_registration.rs  application_registration_id.rs  arbitrary_json.rs  (+223 more)
crates/command/: Cargo.toml  README.md  revamp-todo.md
crates/config/: Cargo.toml
crates/credentials/: Cargo.toml  README.md
crates/entrypoint/: Cargo.toml
crates/gitea/: Cargo.toml
crates/hcl/: Cargo.toml
crates/hcl_types/: Cargo.toml
crates/pathing/: CHANGELOG.md  Cargo.toml  README.md
crates/registry/: Cargo.toml
crates/relative_location/: CHANGELOG.md  Cargo.toml  README.md
crates/rest/: Cargo.toml
crates/software/: Cargo.toml
crates/tofu/: Cargo.toml
crates/tracing/: Cargo.toml
crates/ui_egui/: Cargo.toml
crates/ui_ratatui/: Cargo.toml
crates/user_input/: CHANGELOG.md  Cargo.toml  README.md
crates/zombies/: Cargo.toml
policy_rewrite/: Cargo.toml  todo.md
policy_rewrite/src/: main.rs
rust/: Cargo.toml  Get-DataDirSize.ps1  build.rs  changelog.md  icon.rc  rustfmt.toml  todo.md
rust/.cargo/: config.toml
rust/ideas/: error explainer.md  warnings.md
rust/src/: main.rs
visualizer/: Cargo.toml  TODO.md
visualizer/src/: main.rs
(+1245 files in other folders)
