# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]
[workspace.package]
edition = "2024"
authors = ["TeamDman"]
repository = "https://github.com/AAFC-Cloud/Cloud-Terrastodon.git"
readme = "README.md"
license = "LiLiQ-R-1.1"

[workspace.dependencies]
anyhow = "1.0.82"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.44.2", features = ["full"] }
tempfile = "3.10.1"
indicatif = "0.17.8"
async-recursion = "1.1.0"
indoc = "2.0.5"
hcl-rs = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indexmap = { version = "2.2.6", features = ["serde"] }
ordermap = { version = "0.5.0", features = ["serde"] }
hcl-primitives = "0.1.5"
uuid = { version = "1.8.0", features = ["serde", "v4", "arbitrary"] }
chrono = { version = "0.4.38", features = ["serde", "arbitrary"] }
rand = "0.8.5"
test-log = { version = "0.2.16", features = ["trace"] }
clap = { version = "4.5.9", features = ["derive", "string"] }
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
humantime = "2.1.0"
directories-next = "2.0.0"
ratatui = "0.29.0"
opener = "0.7.1"
emath = { version = "0.31.1", features = ["serde"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
strum = { version = "0.26.3", features = ["derive"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"
prettyplease = "0.2.25"
syn = { version = "2.0.87", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }
eyre = "0.6.12"
color-eyre = "0.6.3"
bstr = { version = "1.11.3", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
base64 = "0.22.1"
async-trait = "0.1.88"
compact_str = { version = "0.9.0", features = ["arbitrary"] }
validator = { version = "0.20.0", features = [
    "derive",
] } # "indexmap" feature may be useful later
holda = { version = "0.1.0", features = ["serde"] }
regex = "1.11.1"
arbitrary = { version = "1.4.1", features = ["derive"] }
unicode_categories = "0.1.1"
nom = "8.0.0"
nom-language = "0.1.0"
ipnetwork = {version="0.21.1",features=["serde"]}
winnow = "0.7.11"
nucleo = "0.5.0"
tui-textarea = "0.7.0"
rustc-hash = "2.1.1"

[workspace.dependencies.cloud_terrastodon_pathing]
version = "0.22.0" # CT_VERSION
path = "./crates/pathing"

[workspace.dependencies.cloud_terrastodon_config]
version = "0.22.0" # CT_VERSION
path = "./crates/config"

[workspace.dependencies.cloud_terrastodon_azure]
version = "0.22.0" # CT_VERSION
path = "./crates/azure"

[workspace.dependencies.cloud_terrastodon_azure_types]
version = "0.22.0" # CT_VERSION
path = "./crates/azure_types"

[workspace.dependencies.cloud_terrastodon_azure_resource_types]
version = "0.22.0" # CT_VERSION
path = "./crates/azure_resource_types"

[workspace.dependencies.cloud_terrastodon_azure_devops]
version = "0.22.0" # CT_VERSION
path = "./crates/azure_devops"

[workspace.dependencies.cloud_terrastodon_azure_devops_types]
version = "0.22.0" # CT_VERSION
path = "./crates/azure_devops_types"

[workspace.dependencies.cloud_terrastodon_azure_devops_rest_client]
version = "0.22.0" # CT_VERSION
path = "./crates/azure_devops_rest_client"

[workspace.dependencies.cloud_terrastodon_hcl]
version = "0.22.0" # CT_VERSION
path = "./crates/hcl"

[workspace.dependencies.cloud_terrastodon_hcl_types]
version = "0.22.0" # CT_VERSION
path = "./crates/hcl_types"

[workspace.dependencies.cloud_terrastodon_user_input]
version = "0.22.0" # CT_VERSION
path = "./crates/user_input"

[workspace.dependencies.cloud_terrastodon_command]
version = "0.22.0" # CT_VERSION
path = "./crates/command"

[workspace.dependencies.cloud_terrastodon_entrypoint]
version = "0.22.0" # CT_VERSION
path = "./crates/entrypoint"

[workspace.dependencies.cloud_terrastodon_zombies]
version = "0.22.0" # CT_VERSION
path = "./crates/zombies"

[workspace.dependencies.cloud_terrastodon_relative_location]
version = "0.22.0" # CT_VERSION
path = "./crates/relative_location"

[workspace.dependencies.cloud_terrastodon_ui_ratatui]
version = "0.22.0" # CT_VERSION
path = "./crates/ui_ratatui"

[workspace.dependencies.cloud_terrastodon_ui_egui]
version = "0.22.0" # CT_VERSION
path = "./crates/ui_egui"

[workspace.dependencies.cloud_terrastodon_azure_locations]
version = "0.22.0" # CT_VERSION
path = "./crates/azure_locations"


[package]
name = "cloud_terrastodon"
version = "0.22.0" # CT_VERSION
description = "A command-line tool for interacting with cloud ecosystems"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
embed-resource = "1.6.3"

[dependencies]
cloud_terrastodon_entrypoint = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }








