[package]
name = "cloud_terrastodon"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]


[workspace.dependencies]
pathing = { version = "0.1.0", path = "./crates/pathing" }
pathing_types = { version = "0.1.0", path = "./crates/pathing_types" }
azure = { version = "0.1.0", path = "./crates/azure" }
azure_types = { version = "0.1.0", path = "./crates/azure_types" }
tofu = { version = "0.1.0", path = "./crates/tofu" }
tofu_types = { version = "0.1.0", path = "./crates/tofu_types" }
fzf = { version = "0.1.0", path = "./crates/fzf" }
command = { version = "0.1.0", path = "./crates/command" }
entrypoint = { version = "0.1.0", path = "./crates/entrypoint" }
anyhow = "1.0.82"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tempfile = "3.10.1"
indicatif = "0.17.8"
async-recursion = "1.1.0"
indoc = "2.0.5"
hcl-rs = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
indexmap = "2.2.6"
# unidecode = "0.3.0"
hcl-primitives = "0.1.5"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
test-log = { version = "0.2.16", features = ["trace"] }
clap = { version = "4.5.9", features = ["derive", "string"] }
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
humantime = "2.1.0"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
entrypoint = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
