[package]
name = "cloud_terrastodon"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]


[workspace.dependencies]
cloud_terrastodon_core_pathing = { version = "0.1.0", path = "./crates/pathing" }
cloud_terrastodon_core_config = { version = "0.1.0", path = "./crates/config" }
cloud_terrastodon_core_azure = { version = "0.1.0", path = "./crates/azure" }
cloud_terrastodon_core_azure_types = { version = "0.1.0", path = "./crates/azure_types" }
cloud_terrastodon_core_azure_devops = { version = "0.1.0", path = "./crates/azure_devops" }
cloud_terrastodon_core_azure_devops_types = { version = "0.1.0", path = "./crates/azure_devops_types" }
cloud_terrastodon_core_azure_devops_rest_client = { version = "0.1.0", path = "./crates/azure_devops_rest_client" }
cloud_terrastodon_core_tofu = { version = "0.1.0", path = "./crates/tofu" }
cloud_terrastodon_core_tofu_types = { version = "0.1.0", path = "./crates/tofu_types" }
cloud_terrastodon_core_user_input = { version = "0.1.0", path = "./crates/user_input" }
cloud_terrastodon_core_command = { version = "0.1.0", path = "./crates/command" }
cloud_terrastodon_core_entrypoint = { version = "0.1.0", path = "./crates/entrypoint" }
cloud_terrastodon_core_zombies = { version = "0.1.0", path = "./crates/zombies" }
cloud_terrastodon_core_relative_location = { version = "0.1.0", path = "./crates/relative_location" }
cloud_terrastodon_ui_ratatui = { version = "0.1.0", path = "./crates/ui_ratatui" }
cloud_terrastodon_ui_egui = { version = "0.1.0", path = "./crates/ui_egui" }
anyhow = "1.0.82"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tempfile = "3.10.1"
indicatif = "0.17.8"
async-recursion = "1.1.0"
indoc = "2.0.5"
hcl-rs = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indexmap = "2.2.6"
# unidecode = "0.3.0"
hcl-primitives = "0.1.5"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
test-log = { version = "0.2.16", features = ["trace"] }
clap = { version = "4.5.9", features = ["derive", "string"] }
iso8601-duration = { version = "0.2.0", features = ["serde", "chrono"] }
humantime = "2.1.0"
directories-next = "2.0.0"
ratatui = "0.29.0"
opener = "0.7.1"
emath = {version="0.31.1",features=["serde"]}
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
strum = { version = "0.26.3", features = ["derive"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"
prettyplease = "0.2.25"
syn = { version = "2.0.87", default-features = false, features = [
    "full",
    "parsing",
    "printing",
] }
eyre = "0.6.12"
color-eyre = "0.6.3"
bstr = { version = "1.11.3", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json"] }
base64 = "0.22.1"
async-trait = "0.1.88"

[build-dependencies]
embed-resource = "1.6.3"

[dependencies]
cloud_terrastodon_core_entrypoint = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
