[package]
name = "cloud_terrastodon_azure_devops"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_azure_devops_types = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_hcl_types = { workspace = true }
cloud_terrastodon_azure_devops_rest_client = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
indoc = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }