[package]
name = "cloud_terrastodon_azure_devops"
description = "Helpers for interacting with Azure DevOps for the Cloud Terrastodon project"
version = "0.15.0" # CT_VERSION
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud_terrastodon_azure_devops_types = { workspace = true }
cloud_terrastodon_command = { workspace = true }
cloud_terrastodon_user_input = { workspace = true }
cloud_terrastodon_hcl_types = { workspace = true }
# cloud_terrastodon_azure_devops_rest_client = { workspace = true }
cloud_terrastodon_pathing = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
indoc = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }


