[package]
name = "cloud_terrastodon_azure_devops"
description = "Helpers for interacting with Azure DevOps for the Cloud Terrastodon project"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

version = "0.26.0" # CT_VERSION

[dependencies]
cloud_terrastodon_azure_devops_types.workspace = true
cloud_terrastodon_command.workspace = true
cloud_terrastodon_user_input.workspace = true
cloud_terrastodon_hcl_types.workspace = true
cloud_terrastodon_pathing.workspace = true
cloud_terrastodon_credentials.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing.workspace = true
itertools.workspace = true
rand.workspace = true
indoc.workspace = true
humantime.workspace = true
ratatui = { version = "0.29.0", optional = true }
tui-textarea = { version = "0.7.0", optional = true }
base64.workspace = true
reqwest.workspace = true

[dev-dependencies]
test-log.workspace = true

[features]
# Enables text user interface support
tui = ["ratatui", "tui-textarea"]
default = ["tui"]



